tests/error/poly_errors_py312/linear_by_default.err
Error: Copy violation (at $FILE:8:14)
  | 
6 | def main[T](x: T @ owned) -> tuple[T, T]:
7 |     # T is not copyable
8 |     return x, x
  |               ^ Variable `x` with non-copyable type `T` cannot be returned
  |                 ...
  | 
8 |     return x, x
  |            - since it was already returned here

Guppy compilation failed due to 1 previous error
